--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
-    "vue-js-toggle-button": "^1.3.3"
+    "vue-js-toggle-button": "^1.3.3",
+    "vue-snowf": "0.0.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0"
