--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "vue-js-toggle-button": "^1.3.3",
-    "vue-snowf": "0.0.2"
+    "vue-snowf": "0.0.2",
+    "vue-typer": "^1.2.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0"
